all graphs generated to the HTML from the sources

--- a/DGT_Table.html
+++ b/DGT_Table.html
@@ -67,6 +67,7 @@ TOP_TEN_HOLDINGS
 <tr>
 </table>
 <table STYLE="margin-bottom: 30px;"><tr><td></td></tr></table>
+<img src="DGT_BarChart.jpg" alt="" style="width:540px;height:480px;" ><table STYLE="margin-bottom: 30px;"><tr><td></td></tr></table>
 <table>
 COUNTRY_WEIGHTS
 <tr>
@@ -171,6 +172,7 @@ COUNTRY_WEIGHTS
 <tr>
 </table>
 <table STYLE="margin-bottom: 30px;"><tr><td></td></tr></table>
+<img src="DGT_CountryPie.jpg" alt="" style="width:640px;height:540px;" ><table STYLE="margin-bottom: 30px;"><tr><td></td></tr></table>
 <table>
 SECTOR_WEIGHTS
 <tr>
@@ -227,5 +229,6 @@ SECTOR_WEIGHTS
 <tr>
 </table>
 <table STYLE="margin-bottom: 30px;"><tr><td></td></tr></table>
+<img src="DGT_SectorPie.jpg" alt="" style="width:540px;height:480px;" ><table STYLE="margin-bottom: 30px;"><tr><td></td></tr></table>
 </body>
 </html>
