--- a/XTN_Table.html
+++ b/XTN_Table.html
@@ -67,6 +67,7 @@ TOP_TEN_HOLDINGS
 <tr>
 </table>
 <table STYLE="margin-bottom: 30px;"><tr><td></td></tr></table>
+<img src="XTN_BarChart.jpg" alt="" style="width:540px;height:480px;" ><table STYLE="margin-bottom: 30px;"><tr><td></td></tr></table>
 <table>
 SECTOR_WEIGHTS
 <tr>
@@ -103,5 +104,6 @@ SECTOR_WEIGHTS
 <tr>
 </table>
 <table STYLE="margin-bottom: 30px;"><tr><td></td></tr></table>
+<img src="XTN_SectorPie.jpg" alt="" style="width:540px;height:480px;" ><table STYLE="margin-bottom: 30px;"><tr><td></td></tr></table>
 </body>
 </html>
