--- a/DGT_Table.html
+++ b/DGT_Table.html
@@ -21,18 +21,18 @@ TOP_TEN_HOLDINGS
 <td>14039</td>
 <tr>
 <tr>
-<td>Apple Inc.</td>
-<td>0.9%</td>
-<td>5110</td>
-<tr>
-<tr>
 <td>LVMH Moet Hennessy Louis Vuitton SE</td>
 <td>0.9%</td>
 <td>3067</td>
 <tr>
 <tr>
+<td>Apple Inc.</td>
+<td>0.89%</td>
+<td>5110</td>
+<tr>
+<tr>
 <td>Societe Generale S.A. Class A</td>
-<td>0.88%</td>
+<td>0.89%</td>
 <td>13997</td>
 <tr>
 <tr>
@@ -41,29 +41,29 @@ TOP_TEN_HOLDINGS
 <td>33231</td>
 <tr>
 <tr>
+<td>Deere & Company</td>
+<td>0.87%</td>
+<td>6315</td>
+<tr>
+<tr>
 <td>Boeing Company</td>
-<td>0.84%</td>
+<td>0.85%</td>
 <td>4120</td>
 <tr>
 <tr>
-<td>Carnival Corporation</td>
-<td>0.83%</td>
-<td>11747</td>
-<tr>
-<tr>
 <td>Deutsche Bank AG</td>
-<td>0.83%</td>
+<td>0.84%</td>
 <td>38328</td>
 <tr>
 <tr>
 <td>UniCredit S.p.A.</td>
-<td>0.83%</td>
+<td>0.84%</td>
 <td>39316</td>
 <tr>
 <tr>
-<td>Deere & Company</td>
-<td>0.82%</td>
-<td>6315</td>
+<td>Banco Santander S.A.</td>
+<td>0.83%</td>
+<td>111034</td>
 <tr>
 </table>
 <table STYLE="margin-bottom: 30px;"><tr><td></td></tr></table>
@@ -76,7 +76,7 @@ COUNTRY_WEIGHTS
 <tr>
 <tr>
 <td>Australia</td>
-<td>1.34%</td>
+<td>1.33%</td>
 <tr>
 <tr>
 <td>Belgium</td>
@@ -84,19 +84,19 @@ COUNTRY_WEIGHTS
 <tr>
 <tr>
 <td>Brazil</td>
-<td>0.58%</td>
+<td>0.6%</td>
 <tr>
 <tr>
 <td>Canada</td>
-<td>1.21%</td>
+<td>1.23%</td>
 <tr>
 <tr>
 <td>China</td>
-<td>3.77%</td>
+<td>3.73%</td>
 <tr>
 <tr>
 <td>Denmark</td>
-<td>0.66%</td>
+<td>0.65%</td>
 <tr>
 <tr>
 <td>Finland</td>
@@ -104,15 +104,15 @@ COUNTRY_WEIGHTS
 <tr>
 <tr>
 <td>France</td>
-<td>7.24%</td>
+<td>7.28%</td>
 <tr>
 <tr>
 <td>Germany</td>
-<td>4.83%</td>
+<td>4.85%</td>
 <tr>
 <tr>
 <td>Hong Kong</td>
-<td>0.63%</td>
+<td>0.61%</td>
 <tr>
 <tr>
 <td>India</td>
@@ -120,19 +120,19 @@ COUNTRY_WEIGHTS
 <tr>
 <tr>
 <td>Italy</td>
-<td>1.57%</td>
+<td>1.58%</td>
 <tr>
 <tr>
 <td>Japan</td>
-<td>9.48%</td>
+<td>9.41%</td>
 <tr>
 <tr>
 <td>Mexico</td>
-<td>0.78%</td>
+<td>0.82%</td>
 <tr>
 <tr>
 <td>Russia</td>
-<td>0.62%</td>
+<td>0.6%</td>
 <tr>
 <tr>
 <td>South Africa</td>
@@ -140,11 +140,11 @@ COUNTRY_WEIGHTS
 <tr>
 <tr>
 <td>South Korea</td>
-<td>0.85%</td>
+<td>0.82%</td>
 <tr>
 <tr>
 <td>Spain</td>
-<td>2.18%</td>
+<td>2.21%</td>
 <tr>
 <tr>
 <td>Sweden</td>
@@ -156,19 +156,19 @@ COUNTRY_WEIGHTS
 <tr>
 <tr>
 <td>Taiwan</td>
-<td>0.69%</td>
+<td>0.71%</td>
 <tr>
 <tr>
 <td>Unassigned</td>
-<td>0.24%</td>
+<td>0.82%</td>
 <tr>
 <tr>
 <td>United Kingdom</td>
-<td>7.26%</td>
+<td>7.25%</td>
 <tr>
 <tr>
 <td>United States</td>
-<td>47.74%</td>
+<td>47.1%</td>
 <tr>
 </table>
 <table STYLE="margin-bottom: 30px;"><tr><td></td></tr></table>
@@ -181,47 +181,47 @@ SECTOR_WEIGHTS
 <tr>
 <tr>
 <td>Financials</td>
-<td>19.11%</td>
+<td>19.15%</td>
 <tr>
 <tr>
 <td>Industrials</td>
-<td>14.6%</td>
+<td>14.66%</td>
 <tr>
 <tr>
 <td>Consumer Discretionary</td>
-<td>12.56%</td>
+<td>12.51%</td>
 <tr>
 <tr>
 <td>Information Technology</td>
-<td>12.28%</td>
+<td>12.24%</td>
 <tr>
 <tr>
 <td>Health Care</td>
-<td>9.26%</td>
+<td>9.2%</td>
 <tr>
 <tr>
 <td>Energy</td>
-<td>8.2%</td>
+<td>8.17%</td>
 <tr>
 <tr>
 <td>Consumer Staples</td>
-<td>7.32%</td>
+<td>7.31%</td>
 <tr>
 <tr>
 <td>Materials</td>
-<td>6.81%</td>
+<td>6.87%</td>
 <tr>
 <tr>
 <td>Telecommunication Services</td>
-<td>4.86%</td>
+<td>4.89%</td>
 <tr>
 <tr>
 <td>Utilities</td>
-<td>3.57%</td>
+<td>3.56%</td>
 <tr>
 <tr>
 <td>Unassigned</td>
-<td>1.0%</td>
+<td>0.99%</td>
 <tr>
 <tr>
 <td>Real Estate</td>
